cmake_minimum_required(VERSION 3.21)
project(Lecture3Examples)

set(CMAKE_CXX_STANDARD 14)

add_executable(Average average.cpp)
add_executable(Exams exams.cpp)
add_executable(theNumber4 theNumber4.cpp)
add_executable(half half.cpp)
add_executable(numbers numbers.cpp)
add_executable(fullName fullName.cpp)
add_executable(sales sales.cpp)
